--- a/ memory_game/index.html
+++ b/ memory_game/index.html
@@ -19,7 +19,7 @@
 <main>
 	<h2>Instructions</h2>
 		<p>
-			Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards. Playing memory games are full of fun for people of all age groups. Not only these games provide you with brain gym, but also help you to socialize.
+			Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards. Playing memory games are full of fun for people of all age groups.
 		</p>
 
 	<h3>LET'S PLAY!</h3>
